[package]
name = "SiPEED-A075V"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
crossbeam-channel = "0.5.15"
eframe = { version = "0.31.1", features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",
    "persistence",
] }
epi = "0.17.0"
image = "0.25.6"
ndarray = "0.16.1"
once_cell = "1.21.3"
# opencv = "0.94.4"
ureq = "3.0.11"
egui = { version = "0.31.1", features = ["callstack", "default", "log"] }
egui-snarl = { version = "0.7.1", features = ["serde"] }
glam = "0.30.3"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
syn = "2.0.101"
typetag = "0.2.20"
bytemuck = "1.23.0"
# simple_logger = "5.0.0"
log = "0.4.27"
env_logger = "0.11.8"
ply-rs = "0.1.3"
wgpu = "25.0.0"
dialog = "0.3.0"
